fix 1 cai gi do o file nay a k biet

--- a/index.html
+++ b/index.html
@@ -322,7 +322,9 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 						</div>
 					</div>
 				</div>
-				<div class="skill-img skill-3 col-lg-12">
+
+				<div class="skill-img skill-3 col-md-12"></div>
+				<div class="skill-img col-lg-6">
 					<img class="image img-fuild" src="./images/Cert_PRF.png" alt="Ảnh chứng chỉ">
 					<div class="content">
 						<h5 style="margin-bottom: 20px;">CHỨNG CHỈ XÂY DỰNG PHẦN MỀM ĐẦU TIÊN - FUNIX</h5>
@@ -378,8 +380,8 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 				</div>
 
 				<!-- Bảng 2 -->
-				<div class="col-md-4 mb-5 mb-md-0">
-					<div class="pro-flex">
+				<div class="col-md-4 mb-5 mb-md-0 d-flex">
+					<div class="pro-flex flex-fill align-items-stretch">
 						<img src="./images/project_2.png" alt="Project 1" width="100%">
 						<div class="pro-title">WEB QUẢN LÝ THÚ CƯNG</div>
 						<div class="pro-border">
