add padding bottom

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 						<table>
 							<tr>
 								<td>Mô tả</td>
-								<td>Trang Web CV cá nhân online. Gồm các thông tin cá nhân cũng như kỹ 
+								<td style="padding-bottom: 34px">Trang Web CV cá nhân online. Gồm các thông tin cá nhân cũng như kỹ 
 									năng nghề nghiệp.</td>
 							</tr>
 							<tr>
