--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
 integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" href="./css/laptop.css">
+	<link rel="stylesheet" href="./css/laptop.css">
 	<link rel="stylesheet" href="./css/tablet.css">
 	<link rel="stylesheet" href="./css/mobile.css">
 	<link rel="stylesheet" href="./css/font.css">
@@ -361,7 +361,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 						<table>
 							<tr>
 								<td>Mô tả</td>
-								<td>Trang Web CV cá nhân online. Gồm các thông tin cá nhân cũng như kỹ 
+								<td style="padding-bottom: 34px;">Trang Web CV cá nhân online. Gồm các thông tin cá nhân cũng như kỹ 
 									năng nghề nghiệp.</td>
 							</tr>
 							<tr>
@@ -427,7 +427,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 						<table>
 							<tr>
 								<td>Mô tả</td>
-								<td>Trang Web xem tin tức từ nhiều nguồn khác nhau, người dùng có thể tìm 
+								<td style="padding-bottom: 34px;">Trang Web xem tin tức từ nhiều nguồn khác nhau, người dùng có thể tìm 
 									kiếm các tin tức dựa theo các từ khóa.</td>
 							</tr>
 							<tr>
